# Pet-Web-App-Project

Design/: Dogfinder Homepage.aco  My Pet - Pet Adoption.aco  Pet Foods & Products Website.aco  Pet Lover - Haustier.aco
backend/pb_data/: data.db  data.db-shm  data.db-wal  logs.db  logs.db-shm  logs.db-wal
backend/pb_migrations/: 1716214649_created_pets.js  1716216164_updated_pets.js  1716216250_deleted_pets.js  1716216357_created_pets.js  1716277233_updated_pets.js  1716278031_updated_pets.js  1716278299_updated_pets.js  1716278626_updated_pets.js  1716890081_updated_pets.js  1716905370_created_adoption_table.js  1716985994_updated_adoption_table.js  1716986547_updated_adoption_table.js  1716987223_updated_adoption_table.js  1716987710_updated_adoption_table.js  1725195519_updated_adoption_table.js  1725195863_updated_users.js  1725467591_updated_pets.js  1725538265_updated_adoption_table.js  1726056678_updated_adoption_table.js  1726416161_updated_pets.js  1726502504_updated_pets.js  1726502536_updated_pets.js  1726503861_updated_pets.js  1726503961_updated_pets.js  1726569530_updated_adoption_table.js  (+8 more)
backend/rust/backend/: .gitignore  Cargo.toml
backend/rust/backend/src/: main.rs
backend/rust/backend/src/controllers/: auth_controller.rs  mod.rs
backend/rust/backend/src/logic/: auth_logic.rs  mod.rs
backend/rust/backend/src/middleware/: jwt_middleware.rs  mod.rs
backend/rust/backend/src/models/: api_response.rs  auth_error.rs  mod.rs  user.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+102 files in other folders)
