[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Nayantha Yasiru | nayanthayasiru@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
